test/data/syntax-errors/bad-expr-in-assignment.gs
it x;
x = whiles + 2;
